--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@
 
 <body>
     <div class="container">
-        <h1>What the F*** is happening in this Movie??</h1>
+        <h1>What the f*** is happening in this Movie??</h1>
         <p>Have you found yourself hopelessly confused during a movie? If so then this is the app for you.</p>
 
         <form id="chat-form">
